<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ProfileDialog</class>
 <widget class="QDialog" name="ProfileDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>454</width>
    <height>281</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Profile</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
   <item>
    <widget class="QScrollArea" name="scrollArea">
     <property name="widgetResizable">
      <bool>true</bool>
     </property>
     <widget class="QWidget" name="scrollAreaWidgetContents">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>420</width>
        <height>610</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="labelUserId">
         <property name="text">
          <string>User-ID:</string>
         </property>
         <property name="buddy">
          <cstring>spinBoxUserId</cstring>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="labelEmail">
         <property name="text">
          <string>E-Mail:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditEmail</cstring>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="labelLongUsername">
         <property name="text">
          <string>Long username:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditLongUsername</cstring>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="labelText">
         <property name="text">
          <string>Text:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditText</cstring>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="labelUsername">
         <property name="text">
          <string>Username:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditUsername</cstring>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QSpinBox" name="spinBoxUserId">
         <property name="readOnly">
          <bool>true</bool>
         </property>
         <property name="maximum">
          <number>16777215</number>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="lineEditEmail">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="lineEditLongUsername">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="lineEditText">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
        <widget class="QLineEdit" name="lineEditUsername">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="labelStreet">
         <property name="text">
          <string>Street:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditStreet</cstring>
         </property>
        </widget>
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="labelCity">
         <property name="text">
          <string>City:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditCity</cstring>
         </property>
        </widget>
       </item>
       <item row="7" column="0">
        <widget class="QLabel" name="labelEmployedSince">
         <property name="text">
          <string>Employed since:</string>
         </property>
         <property name="buddy">
          <cstring>dateEditEmployedSince</cstring>
         </property>
        </widget>
       </item>
       <item row="8" column="0">
        <widget class="QLabel" name="labelEmployedTill">
         <property name="text">
          <string>Employed till:</string>
         </property>
         <property name="buddy">
          <cstring>dateEditEmployedTill</cstring>
         </property>
        </widget>
       </item>
       <item row="9" column="0">
        <widget class="QLabel" name="labelPlaceOfBirth">
         <property name="text">
          <string>Place of birth:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditPlaceOfBirth</cstring>
         </property>
        </widget>
       </item>
       <item row="10" column="0">
        <widget class="QLabel" name="labelZipcode">
         <property name="text">
          <string>Zipcode:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditZipcode</cstring>
         </property>
        </widget>
       </item>
       <item row="11" column="0">
        <widget class="QLabel" name="labelReligion">
         <property name="text">
          <string>Religion:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditReligion</cstring>
         </property>
        </widget>
       </item>
       <item row="12" column="0">
        <widget class="QLabel" name="labelDepartment">
         <property name="text">
          <string>Department:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditDepartment</cstring>
         </property>
        </widget>
       </item>
       <item row="13" column="0">
        <widget class="QLabel" name="labelVerwendgr">
         <property name="text">
          <string>Verwendgr:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditVerwendgr</cstring>
         </property>
        </widget>
       </item>
       <item row="14" column="0">
        <widget class="QLabel" name="labelTaetig">
         <property name="text">
          <string>Taetig:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditTaetig</cstring>
         </property>
        </widget>
       </item>
       <item row="15" column="0">
        <widget class="QLabel" name="labelArbverh">
         <property name="text">
          <string>Arbverh:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditArbverh</cstring>
         </property>
        </widget>
       </item>
       <item row="16" column="0">
        <widget class="QLabel" name="labelBetriebsnr">
         <property name="text">
          <string>Betriebsnr:</string>
         </property>
         <property name="buddy">
          <cstring>lineEditBetriebsnr</cstring>
         </property>
        </widget>
       </item>
       <item row="5" column="1">
        <widget class="QLineEdit" name="lineEditStreet">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="6" column="1">
        <widget class="QLineEdit" name="lineEditCity">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="9" column="1">
        <widget class="QLineEdit" name="lineEditPlaceOfBirth">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="10" column="1">
        <widget class="QLineEdit" name="lineEditZipcode">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="11" column="1">
        <widget class="QLineEdit" name="lineEditReligion">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="12" column="1">
        <widget class="QLineEdit" name="lineEditDepartment">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="13" column="1">
        <widget class="QLineEdit" name="lineEditVerwendgr">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="14" column="1">
        <widget class="QLineEdit" name="lineEditTaetig">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="15" column="1">
        <widget class="QLineEdit" name="lineEditArbverh">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="16" column="1">
        <widget class="QLineEdit" name="lineEditBetriebsnr">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="7" column="1">
        <widget class="QDateEdit" name="dateEditEmployedSince">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="8" column="1">
        <widget class="QDateEdit" name="dateEditEmployedTill">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="standardButtons">
      <set>QDialogButtonBox::Close</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>ProfileDialog</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>226</x>
     <y>5</y>
    </hint>
    <hint type="destinationlabel">
     <x>226</x>
     <y>0</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
